Adds a panama example based on SDL